# upstage-project-backend

./: .README.md.swp  .dockerignore  .env.example  .gitignore  Dockerfile  DomesticStocks.json  Domestic_list_extraction.ipynb  README.md  alembic.ini  check_db_data.py  create_table.py  docker-compose.yml  download_company_master.py  insert_stock.py  insert_test_data.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_real_execution.py  schema.sql  test.sql  test_agent.py  test_analysis.py  test_collector.py  test_info_collector.py  test_portfolio_db.py  test_portfolio_full.py  test_portfolio_query.py  token.html
alembic/: env.py
app/: deps.py  exceptions.py
app/agents/: orchestrator.py  state.py  ticker_resolver.py  tools.py  utils.py
app/agents/subgraphs/: answer_gen.py  info_analysis.py  info_collector.py
app/api/: auth.py  user_deps.py  users.py
app/api/routes/: agent_routers.py  question_routers.py  user_stock.py
app/core/: chroma_db.py  config.py  db.py  firebase.py  llm.py  logger.py  seed.py
app/db/: models.py  session.py
app/models/: __init__.py
app/models/entities/: __init__.py  vector_qa.py
app/models/schemas/: __init__.py  agent.py
app/repository/: question.py  user_stock.py
app/repository/client/: base.py  llm_client.py  (+1 more)
app/service/: agent_service.py  embedding_service.py  user_service.py  vector_service.py
migrations/: env.py
migrations/versions/: c0da8330f90f_init_tables.py  e639d0135366_init_tables.py  edeb048e03c8_add_mentor_to_users.py  f780a0446dc6_init_tables.py
scripts/: get_id_token.py  seed_stocks.py
(+2 files in other folders)
