[project]
name = "upstage-project-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.13.0",
    
    # Authentication & Security
    "firebase-admin>=6.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    
    # LangChain & AI
    "langgraph>=0.0.1",
    "langchain-upstage>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-core>=0.1.0",
    "langsmith>=0.1.0",
    "openai==1.52.2",
    "transformers>=4.30.0",
    
    # Vector Store
    "chromadb==1.3.7",
    
    # HTTP & API
    "httpx==0.27.1",
    "requests>=2.31.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # UI
    "streamlit>=1.28.0",
    
    # Utilities
    "gdown>=5.0.0",
    
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]
